[package]
name = "r-harvest"
description = "Transactional Outbox implementation for Kafka and Postgres"
keywords = ["kafka", "outbox", "transaction"]
version = "0.1.0"
authors = ["Johny Jose <atrniv.j@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
color-eyre = "0.5"
r-neli = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.26", features = ["cmake-build"] }
thiserror = "1.0"
log = { version = "0.4.0", features = ["release_max_level_info"] }
env_logger = "0.7.1"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres" , "chrono", "json"] }
itertools = "0.10"
futures = "0.3.0"
signal-hook = "0.3.8"
signal-hook-tokio = { version = "0.3.0", features = ["futures-v0_3"] }
serde = "1"
serde_yaml = "0.8"
humantime-serde = "1.0.1"
lazy_static = "1.4"
config = "0.9"
ulid = "0.4.1"
hostname = "0.3.1"